# llm-guardrail-proxy

./: .env.example  .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  README.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: smoke_dashboard.py  smoke_phase4.py  smoke_phase4b.py  smoke_phase4c.py  smoke_phase5.py  smoke_phase5b.py
src/llm_guardrail_proxy/: __init__.py  __main__.py
src/llm_guardrail_proxy/cli/: __init__.py  __main__.py  formatters.py  inputs.py  parser.py  runner.py  scan.py
src/llm_guardrail_proxy/config/: __init__.py  thresholds.py
src/llm_guardrail_proxy/core/: __init__.py  exceptions.py  models.py  pricing.py  tokenomics.py
src/llm_guardrail_proxy/proxy/: __init__.py  app.py  circuit_breaker.py  envelope.py  exceptions.py  forwarder.py  handler.py  middleware.py  pipeline.py  providers.py  settings.py
src/llm_guardrail_proxy/proxy/audit/: __init__.py  composite.py  duckdb_sink.py  logging_sink.py  records.py  sinks.py
src/llm_guardrail_proxy/proxy/middlewares/: __init__.py  pii_scan.py  secret_scan.py  tokenomics.py
src/llm_guardrail_proxy/proxy/scanning/: __init__.py  findings.py  patterns.py  pii.py  secrets.py
src/llm_guardrail_proxy/proxy/stats/: __init__.py  dashboard.py  repository.py  router.py
tests/: conftest.py  test_app_audit.py  test_audit_composite.py  test_audit_duckdb_sink.py  test_audit_logging_sink.py  test_audit_records.py  test_audit_sinks.py  test_circuit_breaker.py  test_cli_scan.py  test_phase5b_metadata.py  test_pii_scan_middleware.py  test_pii_scanner.py  test_pipeline.py  test_pipeline_mutate.py  test_providers.py  test_providers_redact.py  test_proxy_app.py  test_proxy_app_phase3.py  test_proxy_app_phase3b.py  test_secret_scan_middleware.py  test_secret_scanner.py  test_stats_endpoint.py  test_stats_summarise.py  test_tokenomics.py  test_tokenomics_middleware.py
