[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-guardrail-proxy"
version = "0.2.0"
description = "Local, zero-egress security and cost guardrail proxy for external LLM APIs."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "llm-guardrail-proxy maintainers" }]

# Runtime requirements are duplicated in requirements.txt for tooling that
# does not consume PEP 621 metadata (e.g. ``pip install -r``).
dependencies = [
    "tiktoken==0.8.0",
    "pydantic==2.9.2",
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "httpx==0.27.2",
    "pydantic-settings==2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[project.scripts]
llm-guardrail-proxy = "llm_guardrail_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["llm_guardrail_proxy"]
